--- a/html/helpers.html
+++ b/html/helpers.html
@@ -5,7 +5,7 @@
 <title></title>
 <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" type="text/css" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link rev="made" href="mailto:matthew@pop-os.localdomain" />
+<link rev="made" href="mailto:root@localhost" />
 </head>
 
 <body>
